# simple-cli

./: .flake8  README.md  pyproject.toml
.github/workflows/: python-app.yml
simple_cli/: __main__.py
src/simple_cli/: __init__.py  __main__.py  get_cwd.py  hello.py
tests/: test_trivial.py
